--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@mui/material": "5.0.3",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
+    "date-fns": "^2.25.0",
+    "lodash": "^4.17.21",
+    "millify": "^4.0.0",
     "next": "11.1.2",
     "prop-types": "15.7.2",
     "react": "17.0.2",
+    "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
-    "sass": "^1.42.1",
-    "lodash": "^4.17.21",
-    "millify": "^4.0.0",
-    "react-countdown": "^2.3.2"
+    "sass": "^1.42.1"
   },
   "scripts": {
     "dev": "next",
