--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "react-dom": "17.0.2",
     "sass": "^1.42.1"
   },
+  "engines": {
+    "node": "14.x"
+  },
+
   "scripts": {
     "dev": "next",
     "build": "next build",
